# hfa-ironclad

./: .gitignore  APPLY_AND_VERIFY.md  AUDIT_APPLY_NOTES.md  BEST_OF_BOTH_NOTES.md  DEPENDENCY_NOTES.md  HFA_Sprint4_Readiness_Report.md  HFA_Sprint4_Roadmap.json  IRONCLAD_V23_1_ROADMAP.md  README.md  README.txt  README_FINAL_PACKAGE.md  README_FINAL_PACKAGE_ARCHITECTURE.md  docker-compose.integration.yml  docker-compose.yml  fix.py  fix_sprint13_once.txt  jj.py  pyproject.toml  pytest.ini  pytest.ini.addition.txt  retention_policy.md  tests_pytest.ini
archive_disabled/: test_budget_guard_atomic.py  test_sandbox.py  test_sprint2.py  test_tenant_patches.py
docs/: FAZ1_1_AUTHORITY_HARDENING.md  FAZ1_AUTHORITY_STABILIZATION.md  FAZ2_1_RESERVATION_DURABILITY.md  (+31 more)
hfa-control/: pyproject.toml
hfa-control/src/hfa_control/: __init__.py  admission.py  audit.py  audit_store.py  auth.py  backpressure.py  capability_router.py  dag_lua.py  dag_scheduler_bridge.py  decision_metrics.py  decision_observability.py  decision_trace_store.py  di.py  dispatch_controller.py  effect_config.py  effect_ledger.py  effect_metrics.py  event_hooks.py  event_store.py  exceptions.py  failure_sweeper.py  fairness.py  fairness_hardening_manager.py  fairness_manager.py  idempotent_completion.py  idempotent_dispatch.py  leader.py  load_shedder.py  main.py  models.py  observable_scheduler_capability_fair_dispatch.py  observable_scheduler_pipeline.py  rate_limit.py  reconciliation_manager.py  recovery.py  redis_resilience.py  redis_utils.py  registry.py  replay_engine.py  reservation_reaper.py  (+23 more)
hfa-control/src/hfa_control/api/: models.py  router.py
hfa-control/tests/: test_sprint10_codec.py  test_sprint10_graph_store.py  test_sprint10_leader.py  test_sprint10_recovery.py  test_sprint10_registry.py  test_sprint10_scheduler.py
hfa-core/: pyproject.toml  setup.py
hfa-core/src/hfa/: __init__.py
hfa-core/src/hfa/config/: __init__.py  keys.py
hfa-core/src/hfa/core/: __init__.py  config.py
hfa-core/src/hfa/dag/: capabilities.py  events.py  fairness.py  fairness_hardening.py  heartbeat.py  reasons.py  schema.py
hfa-core/src/hfa/events/: bus.py  codec.py  schema.py
hfa-core/src/hfa/governance/: __init__.py  budget_guard.py  compliance_policy.py  exceptions.py  signed_ledger_v1.py
hfa-core/src/hfa/healing/: __init__.py  circuit_breaker.py  loop.py  store.py
hfa-core/src/hfa/llm/: __init__.py  robust_client.py
hfa-core/src/hfa/llm/providers/: openai.py
hfa-core/src/hfa/lua/: __init__.py  dispatch_commit.lua  enqueue_admitted.lua  loader.py  rate_limit.lua  reserve_worker.lua  state_transition.lua  task_admit.lua  task_claim_start.lua  task_complete.lua  task_dispatch_commit.lua  task_requeue.lua
hfa-core/src/hfa/obs/: graph_store.py  metrics.py  otel.py  otel_bootstrap.py  run_graph.py  runtime_metrics.py  tracing.py
hfa-core/src/hfa/runtime/: __init__.py  backpressure.py  failure_semantics.py  idempotency.py  idempotency_store.py  lineage_config.py  lineage_store.py  payload_config.py  payload_metrics.py  payload_store.py  redis_policy.py  shard.py  state_store.py  tenant_utils.py
hfa-core/src/hfa/schemas/: __init__.py  agent.py  agent.py.bak-20260304-104117  agent.py.bak-20260304-111215  research.py  supervisor.py
hfa-core/src/hfa/state/: __init__.py
hfa-core/src/hfa_core.egg-info/: PKG-INFO  SOURCES.txt
hfa-tools/: pyproject.toml
hfa-tools/src/hfa_tools/: __init__.py
hfa-tools/src/hfa_tools/api/: inspector.py
hfa-tools/src/hfa_tools/middleware/: ledger.py  otel.py  rate_limit.py  tenant.py  tenant.py.bak-20260304-104117  tenant.py.bak-20260304-111215  tenant.py.bak-20260304-111903  tenant.py.bak-20260304-112623  tenant.py.bak-20260304-112823  tenant.py.bak-20260304-113649
hfa-tools/src/hfa_tools/sandbox/: distributed_pool.py  pool.py  runner.py
hfa-tools/src/hfa_tools/services/: architect_service.py  coder_service.py  debugger_service.py  orchestrator.py  researcher_service.py  tester_service.py
hfa-tools/tests/: test_budget_guard_atomic.py  test_sandbox.py  test_sprint2.py  test_sprint6.py  test_sprint8_tracing.py  test_tenant_patches.py
hfa-worker/: pyproject.toml
hfa-worker/src/hfa_worker/: consumer.py  drain.py  execution_types.py  executor.py  executor_base.py  executor_factory.py  fake_executor.py  fake_executor_v2.py  heartbeat.py  idempotency.py  input_resolver.py  main.py  models.py  openai_executor.py  redis_utils.py  task_consumer.py  task_context.py  task_executor.py  task_heartbeat.py
(+200 files in other folders)
