[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfa-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hfa-core",
    "fastapi>=0.111",
    "starlette>=0.37",
    "pydantic>=2.7",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4",
    "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]